--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -66,6 +66,8 @@
   flex-direction: column;
   @include padding(30,90,30);
   border: 2px solid $medium-pink;
+  background: url('#{$image-base-url}/planner-bg.png') no-repeat;
+  background-size: contain;
   @include mobile {
     padding: 2rem;
   }
