--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -10,6 +10,9 @@
     font-size: 4.5rem;
     color: $white;
     text-align: center;
+    @include mobile {
+      font-size: 3rem;
+    }
   }
 
   h4 {
@@ -18,6 +21,9 @@
     font-weight: 300;
     font-size: 1.8rem;
     line-height: 1.36;
+    @include mobile {
+      font-size: 1.5rem;
+    }
   }
 
   .servicesCover {
@@ -29,9 +35,11 @@
     background-repeat: no-repeat;
     text-align: center;
     padding-left: 10%;
+    margin-bottom: 5rem;
     @include mobile {
       height: 90vw;
       background-position: right;
+      margin-bottom: 0;
     }
 
     .coverDetail {
@@ -44,6 +52,8 @@
 
       @include mobile {
         width: 90%;
+        justify-content: flex-end;
+        padding-bottom: 2rem;
       }
     }
 
@@ -52,6 +62,9 @@
       width: 100%;
       justify-content: space-around;
       margin-top: 3rem;
+      @include mobile {
+        margin-top: 0;
+      }
 
       img {
         cursor: pointer;
@@ -60,6 +73,10 @@
         animation-duration: 1s;
         animation-fill-mode: forwards;
         animation-delay: 1.5s;
+        @include mobile {
+          width: 3rem;
+          height: 3rem;
+        }
 
         &:nth-child(2) {
           animation-delay: 2s;
@@ -87,11 +104,11 @@
       @include padding(60, 40);
       border-right: 2px solid $medium-pink;
       text-align: right;
-
       @include mobile {
         text-align: center;
         padding-bottom: 0;
         border: none;
+        margin-top: 0;
       }
 
       h3 {
@@ -112,6 +129,12 @@
 
       ul {
         list-style: none;
+        @include mobile {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-evenly;
+          margin-top: 1rem;
+        }
 
         li {
           @include padding(10,0);
@@ -119,6 +142,9 @@
           cursor: pointer;
           font-weight: 500;
           color: $greyish-brown;
+          @include mobile {
+            display: inline-block;
+          }
         }
 
         .activeLi {
@@ -136,6 +162,9 @@
 
             &:first-child {
               margin-top: 1rem;
+              @include mobile {
+                margin-top: 0;
+              }
             }
           }
 
