--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -46,3 +46,4 @@ $medium-pink: #f03690;
 $lavender-pink: #c86dd7;
 $warm-grey-eight-two: #9b9b9b;
 $greyish-brown-six: #4a4a4a;
+$greyish-brown-two: #545454;
