--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -11,7 +11,8 @@
     color: $white;
     text-align: center;
     @include mobile {
-      font-size: 3rem;
+      font-size: 33px;
+      font-weight: bold;
     }
   }
 
@@ -107,11 +108,6 @@
         background-color: $medium-pink;
         @include tablet {
           flex-direction: row-reverse;
-
-          .imageCarouselWrap {
-            margin-left: 1.2rem;
-            margin-right: 0;
-          }
         }
 
         h3 {
@@ -148,6 +144,7 @@
         padding-top: 1rem;
         font-size: 2.143rem;
         font-weight: 700;
+        padding: 1rem 1rem 0;
       }
     }
   }
@@ -167,7 +164,9 @@
   padding: 2rem;
   margin-bottom: 1rem;
   border: 1px solid $medium-pink;
+  flex-direction: column;
   @include tablet {
+    flex-direction: row;
     border: none;
     padding: 1rem;
 
@@ -177,6 +176,8 @@
     font-size: 2.143rem;
     font-weight: 700;
     color: $medium-pink;
+    text-align: center;
+    margin: 0;
 
     &.mobile {
       color: $greyish-brown;
@@ -186,7 +187,6 @@
 }
 
 .imageCarouselWrap {
-  margin-right: 1.2rem;
   position: relative;
   @include tablet {
     display: flex;
@@ -200,7 +200,7 @@
   flex-grow: 1;
   @include tablet {
     background-color: #f5f5f5;
-    padding: 1.8rem;
+    padding: 1.8rem 8%;
     box-shadow: 1px 1px 0 0 rgba(242, 46, 144, 0.8);
 
   }
@@ -212,23 +212,24 @@
     justify-content: flex-start;
     padding: 0;
     flex-wrap: wrap;
+    margin: 1.5rem 0;
     @include tablet {
       justify-content: center;
     }
 
     li {
-      @include padding(4, 0, 4, 20);
+      padding: .2rem 0 .2rem 1.25rem;
       font-size: 15px;
       position: relative;
       color: $greyish-brown-two;
+      line-height: 1.72;
+      width: 100%;
       @include tablet {
-         @include padding(4, 0, 4, 40);
-        font-size: 1.143rem;
+         @include padding(0,0,0,40);
+        font-size: 1.286rem;
         width: 50%;
       }
-      @include desktop {
-        font-size: 1.143rem;
-      }
+      @include desktop {}
 
       &::before {
         content: '';
@@ -258,10 +259,10 @@
   z-index: 2;
   width: 4.285rem;
   height: 4.285rem;
-  @include tablet {
-    position: absolute;
-    left: 50%;
-    bottom: 2.5rem;
-    transform: translateX(-50%);
-  }
+  // @include tablet {
+  position: absolute;
+  left: 50%;
+  bottom: 2.5rem;
+  transform: translateX(-50%);
+  // }
 }
