--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,3 +18,8 @@
 .modal-dialog {
     max-width: 80%;
 }
+@media only screen and (min-width: 768px) and (max-width: 1000px) {
+    .navbar-nav .nav-link{
+        margin: 0 !important;
+    }
+}
